<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="menutests.samps.apps.easysoft.ml.menutests.MainActivity">


    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_share_black_24dp"
        android:orderInCategory="90"
        android:title="@string/share"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_undo"
        android:icon="@drawable/ic_undo_black_24dp"
        android:orderInCategory="100"
        android:title="@string/undo"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_clear_all"
        android:orderInCategory="110"
        android:title="@string/clear_all"
        app:showAsAction="collapseActionView" />

    <item
        android:id="@+id/action_color_white_cells"
        android:orderInCategory="120"
        android:title="@string/color_white_cells"
        app:showAsAction="collapseActionView" />

    <item
        android:id="@+id/action_about"
        android:orderInCategory="130"
        android:title="@string/about_header"
        app:showAsAction="collapseActionView" />
</menu>
